--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "IMDBVotes  0.551452   1.000000"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
        "IMDBVotes  0.655319   1.000000"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
@@ -701,9 +701,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H0: A popular movie at the cinema, is also popular online.\n",
+      "H0: Movies are more popular online, than in the cinema.\n",
       " \n",
-      "p-value:  0.9912672259671249\n",
+      "p-value:  1.0\n",
       "\n",
       "Accept Null Hypothesis (H0)\n"
      ]
@@ -711,9 +711,9 @@
    ],
    "source": [
     "#2 sample z-test: Worldwide Gross and IMDB Votes\n",
-    "print('H0: A popular movie at the cinema, is also popular online.\\n ')\n",
+    "print('H0: Movies are more popular online, than in the cinema.\\n ')\n",
     "\n",
-    "ztest, pval = stests.ztest(gross_votes_df['Gross'], x2 = gross_votes_df['IMDBVotes'], value = gross_votes_df['Gross'].mean(), alternative = 'two-sided')\n",
+    "ztest, pval = stests.ztest(gross_votes_df['IMDBVotes'], x2 = gross_votes_df['Gross'], value = 0, alternative = 'larger')\n",
     "print('p-value: ', pval)\n",
     "\n",
     "if pval<0.05:\n",
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
        "IMDBRating  0.742951    1.000000"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
        "IMDBRating  0.776429    1.000000"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,26 +913,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H0: People in Rotten Tomatoes vote higher than in IMDB.\n",
+      "H0: People in Rotten Tomatoes and  IMDB vote similarly.\n",
       " \n",
-      "p-value:  1.0\n",
+      "p-value:  7.21302915029273e-43\n",
       "\n",
-      "Accept Null Hypothesis (H0)\n"
+      "Reject Null Hypothesis (H0)\n"
      ]
     }
    ],
    "source": [
-    "#2 sample z-test:  RTRating and IMDBRating\n",
-    "print('H0: People in Rotten Tomatoes vote higher than in IMDB.\\n ')\n",
+    "#2 sample z-test1:  RTRating and IMDBRating\n",
+    "print('H0: People in Rotten Tomatoes and  IMDB vote similarly.\\n ')\n",
     "\n",
-    "ztest, pval = stests.ztest(rtr_imdbr_df['RTRating'], x2 = rtr_imdbr_df['IMDBRating'], value = 0 , alternative = 'larger')\n",
+    "ztest, pval = stests.ztest(rtr_imdbr_df['RTRating'], x2 = rtr_imdbr_df['IMDBRating'], value = 0 , alternative = 'two-sided')\n",
     "print('p-value: ', pval)\n",
     "\n",
     "if pval<0.05:\n",
@@ -946,7 +946,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H1: People in Rotten Tomatoes vote higher than in IMDB.\n",
+      " \n",
+      "p-value:  1.0\n",
+      "\n",
+      "Accept Null Hypothesis (H1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2 sample z-test2:  RTRating and IMDBRating\n",
+    "print('H1: People in Rotten Tomatoes vote higher than in IMDB.\\n ')\n",
+    "\n",
+    "ztest, pval = stests.ztest(rtr_imdbr_df['RTRating'], x2 = rtr_imdbr_df['IMDBRating'], value = 0 , alternative = 'larger')\n",
+    "print('p-value: ', pval)\n",
+    "\n",
+    "if pval<0.05:\n",
+    "    \n",
+    "    print('\\nReject Null Hypothesis (H1)')\n",
+    "\n",
+    "else:\n",
+    "    \n",
+    "    print('\\nAccept Null Hypothesis (H1)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1178,7 @@
        "Budget  0.665871  1.000000"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1239,7 @@
        "Budget  0.677304  1.000000"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
