--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -1065,6 +1065,8 @@
     }
    ],
    "source": [
+    "##neeeeeeeeeed it?or nahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh\n",
+    "\n",
     "#creating a dictionary for Genre: total Gross per genre\n",
     "\n",
     "gross_hash ={}\n",
@@ -1330,6 +1332,59 @@
     "    \n",
     "    print('\\nAccept Null Hypothesis (H1)')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      RTRating  IMDBRating         Date\n",
+      "Date                                   \n",
+      "1920  6.900000    7.766667  1924.750000\n",
+      "1930  9.737500    7.390000  1935.846154\n",
+      "1940  9.306250    7.433333  1944.571429\n",
+      "1950  8.062069    7.073529  1954.416667\n",
+      "1960  8.078000    7.209524  1964.969231\n",
+      "1970  7.605882    6.794253  1975.172043\n",
+      "1980  6.818785    6.304819  1984.607692\n",
+      "1990  5.540492    6.209608  1996.226268\n",
+      "2000  4.839738    6.197460  2004.305464\n",
+      "2010  5.078571    6.579268  2010.135417\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/joanna/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "ratings_dates_df = df[['RTRating', 'IMDBRating', 'Date']]\n",
+    "\n",
+    "ratings_dates_df.sort_values('Date', ascending = True, inplace = True)\n",
+    "ratings_dates_df = ratings_dates_df.groupby((df.Date//10)*10).mean()\n",
+    "print(ratings_dates_df)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
