--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -1335,25 +1335,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      RTRating  IMDBRating         Date\n",
-      "Date                                   \n",
-      "1920  6.900000    7.766667  1924.750000\n",
-      "1930  9.737500    7.390000  1935.846154\n",
-      "1940  9.306250    7.433333  1944.571429\n",
-      "1950  8.062069    7.073529  1954.416667\n",
-      "1960  8.078000    7.209524  1964.969231\n",
-      "1970  7.605882    6.794253  1975.172043\n",
-      "1980  6.818785    6.304819  1984.607692\n",
-      "1990  5.540492    6.209608  1996.226268\n",
-      "2000  4.839738    6.197460  2004.305464\n",
-      "2010  5.078571    6.579268  2010.135417\n"
+      "Index  Decade  RTRating  IMDBRating\n",
+      "0        1920  6.900000    7.766667\n",
+      "1        1930  9.737500    7.390000\n",
+      "2        1940  9.306250    7.433333\n",
+      "3        1950  8.062069    7.073529\n",
+      "4        1960  8.078000    7.209524\n",
+      "5        1970  7.605882    6.794253\n",
+      "6        1980  6.818785    6.304819\n",
+      "7        1990  5.540492    6.209608\n",
+      "8        2000  4.839738    6.197460\n",
+      "9        2010  5.078571    6.579268\n",
+      "    Decade     Website    Rating\n",
+      "0     1920    RTRating  6.900000\n",
+      "1     1930    RTRating  9.737500\n",
+      "2     1940    RTRating  9.306250\n",
+      "3     1950    RTRating  8.062069\n",
+      "4     1960    RTRating  8.078000\n",
+      "5     1970    RTRating  7.605882\n",
+      "6     1980    RTRating  6.818785\n",
+      "7     1990    RTRating  5.540492\n",
+      "8     2000    RTRating  4.839738\n",
+      "9     2010    RTRating  5.078571\n",
+      "10    1920  IMDBRating  7.766667\n",
+      "11    1930  IMDBRating  7.390000\n",
+      "12    1940  IMDBRating  7.433333\n",
+      "13    1950  IMDBRating  7.073529\n",
+      "14    1960  IMDBRating  7.209524\n",
+      "15    1970  IMDBRating  6.794253\n",
+      "16    1980  IMDBRating  6.304819\n",
+      "17    1990  IMDBRating  6.209608\n",
+      "18    2000  IMDBRating  6.197460\n",
+      "19    2010  IMDBRating  6.579268\n"
      ]
     },
     {
@@ -1374,9 +1394,14 @@
     "\n",
     "ratings_dates_df.sort_values('Date', ascending = True, inplace = True)\n",
     "ratings_dates_df = ratings_dates_df.groupby((df.Date//10)*10).mean()\n",
-    "print(ratings_dates_df)\n",
     "\n",
-    "\n"
+    "ratings_dates_df = ratings_dates_df[['RTRating', 'IMDBRating']]\n",
+    "ratings_dates_df.reset_index(level=0, inplace=True)\n",
+    "ratings_dates_df = ratings_dates_df.rename(columns={'Date' : 'Decade'})\n",
+    "ratings_dates_df.columns.names = ['Index']\n",
+    "print(ratings_dates_df)\n",
+    "ratings_dates_df = pd.melt(ratings_dates_df, id_vars = 'Decade', var_name = 'Website', value_name='Rating')\n",
+    "print(ratings_dates_df)"
    ]
   },
   {
