--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1047,13 +1047,13 @@
     "gross_genre_df['Genre1'] = genres_df['First']\n",
     "gross_genre_df.dropna(inplace = True)\n",
     "gross_genre_df['Genre2'] = genres_df['Second']\n",
-    "gross_genre_df = gross_genre_df.replace(np.nan, ' ', regex=True)\n",
+    "gross_genre_df = gross_genre_df.replace(np.nan, ' ', regex = True)\n",
     "print(gross_genre_df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,7 @@
        "Budget  0.665871  1.000000"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
        "Budget  0.677304  1.000000"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1382,13 +1382,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Figure size 1440x1080 with 0 Axes>"
+       "<Figure size 720x360 with 0 Axes>"
       ]
      },
      "metadata": {},
@@ -1407,7 +1407,7 @@
    ],
    "source": [
     "#creating catplot for mean ratings per decade\n",
-    "plt.figure(figsize=(20, 15))\n",
+    "plt.figure(figsize=(10, 5))\n",
     "colors = ['darkred', 'black']\n",
     "palette = sns.color_palette(colors)\n",
     "sns.catplot(x = 'Decade', y = 'Rating', hue = 'Website', data = ratings_dates_df, palette = palette, kind = 'bar')\n",
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1447,8 +1447,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
+   "execution_count": 42,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
