--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1016,37 +1016,14 @@
       "\n",
       "[2925 rows x 3 columns]\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/joanna/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
-      "/home/joanna/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  after removing the cwd from sys.path.\n",
-      "/home/joanna/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  \"\"\"\n"
-     ]
     }
    ],
    "source": [
     "#merging Gross with Genres into one DataFrame\n",
-    "gross_genre_df = df[['Gross']]\n",
-    "gross_genre_df['Genre1'] = genres_df['First']\n",
+    "gross_genre_df = pd.DataFrame(df['Gross'])\n",
+    "gross_genre_df['Genre1'] = genres_df[['First']]\n",
     "gross_genre_df.dropna(inplace = True)\n",
-    "gross_genre_df['Genre2'] = genres_df['Second']\n",
+    "gross_genre_df['Genre2'] = genres_df[['Second']]\n",
     "gross_genre_df = gross_genre_df.replace(np.nan, ' ', regex = True)\n",
     "print(gross_genre_df)\n"
    ]
