--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -213,7 +213,8 @@
     "genres_df = genres_df.str.split('/', expand = True)\n",
     "genres_df.columns = ['First', 'Second']\n",
     "\n",
-    "second_genre_df = genres_df['Second'].dropna()\n",
+    "second_genre = genres_df['Second'].dropna()\n",
+    "\n",
     "print(genres_df)"
    ]
   },
@@ -237,7 +238,7 @@
     "        genres_hash[i] += 1\n",
     "\n",
     "\n",
-    "for i in second_genre_df:\n",
+    "for i in second_genre:\n",
     "\n",
     "    if i not in genres_hash:\n",
     "\n",
@@ -279,10 +280,9 @@
     "#making the Genre Number Dataframe so as to make the bar plot later\n",
     "genre_numbers_df = pd.DataFrame.from_dict(genres_hash, orient = 'index')\n",
     "genre_numbers_df.columns = ['Number of Movies']\n",
-    "genre_numbers_df.insert(0, 'Genre', genres_hash.keys())\n",
     "genre_numbers_df.sort_values('Number of Movies', ascending = False, inplace = True)\n",
-    "genre_numbers_df.reset_index()\n",
-    "genre_numbers_df.index = range(len(genre_numbers_df))\n",
+    "genre_numbers_df.reset_index(level = 0, inplace = True)\n",
+    "genre_numbers_df = genre_numbers_df.rename(columns = {'index' : 'Genre'})\n",
     "print(genre_numbers_df)"
    ]
   },
@@ -994,27 +994,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            Gross     Genre1    Genre2\n",
-      "2         10876.0      Drama          \n",
-      "3        203134.0     Comedy          \n",
-      "4        373615.0     Comedy          \n",
-      "5       1087521.0      Drama          \n",
-      "8       6026908.0     Comedy          \n",
-      "...           ...        ...       ...\n",
-      "3183   36851125.0     Comedy          \n",
-      "3184   83080084.0   Thriller  Suspense\n",
-      "3185   12506188.0  Adventure          \n",
-      "3186  141475336.0  Adventure          \n",
-      "3187  233700000.0  Adventure          \n",
-      "\n",
-      "[2925 rows x 3 columns]\n"
+      "             Genres         Gross\n",
+      "0            Action  1.438943e+08\n",
+      "1         Adventure  2.411714e+08\n",
+      "2      Black Comedy  2.290755e+07\n",
+      "3            Comedy  7.475378e+07\n",
+      "4           Concert  3.072440e+07\n",
+      "5       Documentary  1.625452e+07\n",
+      "6             Drama  5.130059e+07\n",
+      "7            Horror  6.082958e+07\n",
+      "8           Musical  7.367620e+07\n",
+      "9   Romantic Comedy  8.661785e+07\n",
+      "10         Thriller  8.058865e+07\n",
+      "11          Western  3.614925e+07\n",
+      "12      Performance  3.072440e+07\n",
+      "13         Suspense  8.058865e+07\n"
      ]
     }
    ],
@@ -1024,8 +1025,14 @@
     "gross_genre_df['Genre1'] = genres_df[['First']]\n",
     "gross_genre_df.dropna(inplace = True)\n",
     "gross_genre_df['Genre2'] = genres_df[['Second']]\n",
-    "gross_genre_df = gross_genre_df.replace(np.nan, ' ', regex = True)\n",
-    "print(gross_genre_df)\n"
+    "\n",
+    "gross_genre1_df = gross_genre_df.groupby('Genre1').mean().reset_index()\n",
+    "gross_genre2_df = gross_genre_df.groupby('Genre2').mean().reset_index()\n",
+    "gross_genre2_df = gross_genre2_df.rename(columns = {'Genre2' : 'Genre1'})\n",
+    "\n",
+    "gross_genre1_df = gross_genre1_df.append(gross_genre2_df, ignore_index = True)\n",
+    "gross_genre1_df = gross_genre1_df.rename(columns = {'Genre1' : 'Genres'})\n",
+    "print(gross_genre1_df)"
    ]
   },
   {
@@ -1045,7 +1052,7 @@
     "##neeeeeeeeeed it?or nahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh\n",
     "\n",
     "#creating a dictionary for Genre: total Gross per genre\n",
-    "\n",
+    "gross_genre_df = gross_genre_df.replace(np.nan, ' ', regex = True)\n",
     "gross_hash ={}\n",
     "\n",
     "gross_list = gross_genre_df['Gross'].values\n",
@@ -1312,13 +1319,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "      Rotten Tomatoes      IMDB\n",
+      "Date                           \n",
+      "1920         6.900000  7.766667\n",
+      "1930         9.737500  7.390000\n",
+      "1940         9.306250  7.433333\n",
+      "1950         8.062069  7.073529\n",
+      "1960         8.078000  7.209524\n",
+      "1970         7.605882  6.794253\n",
+      "1980         6.818785  6.304819\n",
+      "1990         5.540492  6.209608\n",
+      "2000         4.839738  6.197460\n",
+      "2010         5.078571  6.579268\n",
       "    Decade          Website    Rating\n",
       "0     1920  Rotten Tomatoes  6.900000\n",
       "1     1930  Rotten Tomatoes  9.737500\n",
@@ -1347,9 +1366,10 @@
     "# making the DataFrame for the mean() RTRating and mean() IMDBRating per decade\n",
     "ratings_dates_df = df[['RTRating', 'IMDBRating', 'Date']]\n",
     "ratings_dates_df = ratings_dates_df.rename(columns = {'RTRating' : 'Rotten Tomatoes', 'IMDBRating': 'IMDB'})\n",
-    "ratings_dates_df = ratings_dates_df.groupby((df.Date//10)*10).mean()\n",
+    "ratings_dates_df = ratings_dates_df.groupby((ratings_dates_df.Date//10)*10).mean()\n",
     "\n",
     "ratings_dates_df = ratings_dates_df[['Rotten Tomatoes', 'IMDB']]\n",
+    "print(ratings_dates_df)\n",
     "ratings_dates_df.reset_index(level = 0, inplace = True)\n",
     "ratings_dates_df = ratings_dates_df.rename(columns = {'Date' : 'Decade'})\n",
     "\n",
@@ -1359,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
