--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -994,14 +994,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#making one DataFrame with Genres (1 and 2 ) and Gross\n",
+    "gross_genre_df = pd.DataFrame(df['Gross'])\n",
+    "gross_genre_df['Genre1'] = genres_df[['First']]\n",
+    "gross_genre_df.dropna(inplace = True)\n",
+    "gross_genre_df['Genre2'] = genres_df[['Second']]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             Genres         Gross\n",
+      "              Genre    Mean Gross\n",
       "0            Action  1.438943e+08\n",
       "1         Adventure  2.411714e+08\n",
       "2      Black Comedy  2.290755e+07\n",
@@ -1020,19 +1033,52 @@
     }
    ],
    "source": [
-    "#merging Gross with Genres into one DataFrame\n",
-    "gross_genre_df = pd.DataFrame(df['Gross'])\n",
-    "gross_genre_df['Genre1'] = genres_df[['First']]\n",
-    "gross_genre_df.dropna(inplace = True)\n",
-    "gross_genre_df['Genre2'] = genres_df[['Second']]\n",
+    "#Grouping by genres and finding mean gross (in both genre dfs), then putting them all in one DataFrame\n",
+    "m_gross_genre1_df = gross_genre_df.groupby('Genre1').mean().reset_index()\n",
+    "m_gross_genre2_df = gross_genre_df.groupby('Genre2').mean().reset_index()\n",
+    "m_gross_genre2_df = m_gross_genre2_df.rename(columns = {'Genre2' : 'Genre1'})\n",
     "\n",
-    "gross_genre1_df = gross_genre_df.groupby('Genre1').mean().reset_index()\n",
-    "gross_genre2_df = gross_genre_df.groupby('Genre2').mean().reset_index()\n",
-    "gross_genre2_df = gross_genre2_df.rename(columns = {'Genre2' : 'Genre1'})\n",
+    "m_gross_genre1_df = m_gross_genre1_df.append(m_gross_genre2_df, ignore_index = True)\n",
+    "m_gross_genre1_df = m_gross_genre1_df.rename(columns = {'Genre1' : 'Genre', 'Gross' : 'Mean Gross'})\n",
+    "print(m_gross_genre1_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Genre     Std Gross\n",
+      "0            Action  2.058693e+08\n",
+      "1         Adventure  2.700856e+08\n",
+      "2      Black Comedy  3.142652e+07\n",
+      "3            Comedy  1.034544e+08\n",
+      "4           Concert  2.602868e+07\n",
+      "5       Documentary  4.005156e+07\n",
+      "6             Drama  8.783491e+07\n",
+      "7            Horror  7.828756e+07\n",
+      "8           Musical  9.199864e+07\n",
+      "9   Romantic Comedy  1.064150e+08\n",
+      "10         Thriller  1.576044e+08\n",
+      "11          Western  7.233835e+07\n",
+      "12      Performance  3.072440e+07\n",
+      "13         Suspense  8.058865e+07\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Grouping by genres and finding std gross (in both genre dfs), then putting them all in one DataFrame\n",
+    "std_gross_genre1_df = gross_genre_df.groupby('Genre1').std().reset_index()\n",
+    "std_gross_genre2_df = gross_genre_df.groupby('Genre2').std().reset_index()\n",
+    "std_gross_genre2_df = std_gross_genre2_df.rename(columns = {'Genre2' : 'Genre1'})\n",
     "\n",
-    "gross_genre1_df = gross_genre1_df.append(gross_genre2_df, ignore_index = True)\n",
-    "gross_genre1_df = gross_genre1_df.rename(columns = {'Genre1' : 'Genres'})\n",
-    "print(gross_genre1_df)"
+    "std_gross_genre1_df = std_gross_genre1_df.append(gross_genre2_df, ignore_index = True)\n",
+    "std_gross_genre1_df = std_gross_genre1_df.rename(columns = {'Genre1' : 'Genre', 'Gross' : 'Std Gross'})\n",
+    "print(std_gross_genre1_df)"
    ]
   },
   {
