--- a/movies_analysis.ipynb
+++ b/movies_analysis.ipynb
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
        "IMDBVotes    0.6        1.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "IMDBVotes    0.7        1.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {
     "scrolled": true
    },
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1000,15 +1000,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Gross     Genre1    Genre2\n",
+      "2        10876.0      Drama      None\n",
+      "3       203134.0     Comedy      None\n",
+      "4       373615.0     Comedy      None\n",
+      "5      1087521.0      Drama      None\n",
+      "8      6026908.0     Comedy      None\n",
+      "...          ...        ...       ...\n",
+      "3183  36851125.0     Comedy      None\n",
+      "3184  83080084.0   Thriller  Suspense\n",
+      "3185  12506188.0  Adventure      None\n",
+      "3186 141475336.0  Adventure      None\n",
+      "3187 233700000.0  Adventure      None\n",
+      "\n",
+      "[2925 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "#making one DataFrame with Genres (1 and 2 ) and Gross\n",
     "gross_genre_df = pd.DataFrame(df['Gross'])\n",
     "gross_genre_df['Genre1'] = genres_df[['First']]\n",
     "gross_genre_df.dropna(inplace = True)\n",
-    "gross_genre_df['Genre2'] = genres_df[['Second']]\n"
+    "gross_genre_df['Genre2'] = genres_df[['Second']]\n",
+    "print(gross_genre_df)"
    ]
   },
   {
@@ -1179,14 +1201,14 @@
    ],
    "source": [
     "# fixing the negative bottom error CIs and give them the Mean Gross number\n",
-    "#in order to be 0 when the errorbar calculates xerror ( it calculates: mean - bottom error ci)\n",
+    "# in order to be 0 when the errorbar calculates xerror ( it calculates: mean - bottom error ci)\n",
     "m_gross_genre1_df['Bottom Error Ci'] = m_gross_genre1_df['Bottom Error Ci'].mask(m_gross_genre1_df['Bottom Error Ci'] < 0, m_gross_genre1_df['Mean Gross'])\n",
     "print(m_gross_genre1_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1239,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H0: Adventure movies mean gross, is significant higher than action movies mean gross.\n",
+      " \n",
+      "274\n",
+      "420\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2 sample T-test :Adventure - Action Genre Mean Worldwide Gross \n",
+    "\n",
+    "print('H0: Adventure movies mean gross, is significant higher than action movies mean gross.\\n ')\n",
+    "\n",
+    "adventure_mean = m_gross_genre1_df[m_gross_genre1_df['Genre']=='Adventure']\n",
+    "adventure_mean = adventure_mean['Mean Gross']\n",
+    "action_mean = m_gross_genre1_df[m_gross_genre1_df['Genre']=='Action']\n",
+    "action_mean = action_mean['Mean Gross']\n",
+    "\n",
+    "adventure_std = std_gross_genre1_df[std_gross_genre1_df['Genre']=='Adventure']\n",
+    "adventure_std = adventure_std['Std Gross']\n",
+    "action_std = std_gross_genre1_df[std_gross_genre1_df['Genre']=='Action']\n",
+    "action_std = action_std['Std Gross']\n",
+    "\n",
+    "adventure_count = np.array(gross_genre_df[gross_genre_df['Genre1'] == 'Adventure'].count())[0]\n",
+    "action_count = np.array(gross_genre_df[gross_genre_df['Genre1'] == 'Action'].count())[0]\n",
+    "\n",
+    "print(adventure_count)\n",
+    "print(action_count)\n",
+    "t = (adventure_mean - action_mean)/np.sqrt((adventure_std**2 / adventure_count) + (action_std**2 / action_count))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1293,7 @@
     }
    ],
    "source": [
-    "#making Production Budget and Worldwide Gross Scatterplot ----my data mining problem------\n",
+    "#--------my data mining problem--------making Production Budget and Worldwide Gross Scatterplot\n",
     "plt.figure(figsize=(10, 5))\n",
     "sns.scatterplot(x = 'Budget', y='Gross', data = budget_gross_df, facecolor = 'skyblue', edgecolor ='darkblue')\n",
     "\n",
@@ -1368,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
